k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bi-platform
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
